# jupiterlang

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.zig
examples/: hello.jlang  hello.jupiter
source/: main.zig
source/ast/: ast.zig
source/codegen/: codegen.zig
source/colors/: colors.zig
source/lexer/: lexer.zig
source/parser/: parser.zig
src/: codegen.cpp  lexer.cpp  main.cpp
src/include/: codegen.hpp  lexer.hpp
